# hpnmg

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  casestudy.php  ev_charging.xml  ev_charging_robustness.xml  formula.xml  formula_robustness.xml  main.cpp  make_instructions.txt  return_formula.xml
examples/: CMakeLists.txt  pltByHand.cpp
src/hpnmg/: AleatoryVariable.cpp  AleatoryVariable.h  CMakeLists.txt  FlowpipeComputer.cpp  FlowpipeComputer.h  HybridAutomatonHandler.cpp  HybridAutomatonHandler.h  ModelChecker.cpp  ModelChecker.h  NondeterminismSolver.cpp  NondeterminismSolver.h  PLTWriter.cpp  PLTWriter.h  ParametricLocationTree.cpp  ParametricLocationTree.h  ParseHybridPetrinet.cpp  ParseHybridPetrinet.h  ProbabilityCalculator.cpp  ProbabilityCalculator.h  ProbabilityOnFlowpipe.cpp  ProbabilityOnFlowpipe.h  ProbabilityOnFlowpipes.cpp  ProbabilityOnFlowpipes.h  ProbabilityOnReachableSets.cpp  ProbabilityOnReachableSets.h  PropertyBasedPLTBuilder.cpp  PropertyBasedPLTBuilder.h  ReadFormula.cpp  ReadFormula.h  ReadHybridPetrinet.cpp  ReadHybridPetrinet.h  STDiagram.cpp  STDiagram.h  SingularAutomatonCreator.cpp  SingularAutomatonCreator.h  SingularAutomatonWriter.cpp  SingularAutomatonWriter.h  flags.h
src/hpnmg/datastructures/: Event.cpp  Event.h  Formula.xsd  HPnG.xsd  HybridPetriNet.cpp  HybridPetriNet.h  HybridPetrinet.cpp  HybridPetrinet.h  NewParametricLocation.cpp  NewParametricLocation.h  PLT.xsd  ParametricLocation.cpp  ParametricLocation.h  Region.cpp  Region.h  STDPolytope.cpp  STDPolytope.h  STDPolytope.tpp  Simplex.cpp  Simplex.h  SingularAutomaton.cpp  SingularAutomaton.h
src/hpnmg/exceptions/: GeneralExceptions.h  ParametricLocationTreeExceptions.h  STDiagramExceptions.h
src/hpnmg/flowpipeConstruction/: ReachRHPn.h  ReachRHPn.tpp
src/hpnmg/helper/: Computation.cpp  Computation.h  LinearBoundsTree.cpp  LinearBoundsTree.h  LinearDomain.cpp  LinearDomain.h  LinearEquation.cpp  LinearEquation.h  LinearRestriction.cpp  LinearRestriction.h  Triangulation.cpp  Triangulation.h
src/hpnmg/integration/: gauss_legendre.c  gauss_legendre.h
src/hpnmg/modelchecker/: Conjunction.h  ContinuousAtomicProperty.h  DiscreteAtomicProperty.h  False.h  Formula.cpp  Formula.h  Negation.h  RegionModelChecker.cpp  RegionModelChecker.h  True.h  Until.h
src/hpnmg/util/: CMakeLists.txt  Logging.cpp  Logging.h
test/: CMakeLists.txt  example_carlPolytope.cpp  example_carlPolytopeBug.cpp  simple.xml  testAtTimeModelChecker.cpp  testAtTimeModelChecker.cpp~  testEvent.cpp  testFlowpipeConstruction.cpp  testForMeasuring.cpp  testFormula.cpp  testHeatedTank.cpp  testHelper.cpp  testHybridAutomata.cpp  testLinearBoundsTree.cpp  testLinearDomain.cpp  testLinearEquation.cpp  testLinearRestriction.cpp  testModelChecker.cpp  testNondeterministicConflicts.cpp  testParametricLocation.cpp  testParametricLocationTree.cpp  testParseHybridPetrinet.cpp  testProbabilityCalculator.cpp  testProbabilityCaseStudy.cpp  testProbabilityOnFlowpipe.cpp  testProbabilityOnReachableSets.cpp  testPropertyBasedPLTBuilder.cpp  testReadHybridPetrinet.cpp  testRegion.cpp  testRegionModelChecker.cpp  testSTDPolytope.cpp  testSTDiagram.cpp  testSimplex.cpp  testSingularAutomaton.cpp  testUntilPLT.cpp  testUntilPLT.cpp~  testValuetools.cpp
test/testfiles/: ConjunctionFormula.xml  ContinuousAtomicFormula.xml  DiscreteAtomicFormula.xml  Example2Continuous.xml  FalseFormula.xml  Formula.xsd  HA2_Expo.xml  HA2_Normal.xml  HA2_Uniform.xml  HPnG.xsd  InterleavedFormula.xml  Lisa2.xml  NegationFormula.xml  PauineFormula.xml  PaulineFormula.xml  Properties_HA2_Normal.xml  Properties_HA2_Uniform.xml  RobustnessFormula.xml  SimpleDist.xml  TrueFormula.xml  UntilFormula.xml  UntilFormulaAnnabell.xml  UntilFormulaAnnabell2.xml  UntilWithNegationFormula.xml  annabell_example.xml  battery.xml  battery_simple.xml  battery_simple_v2.xml  battery_simple_v3.xml  battery_simple_v3_maybe_broken.xml  battery_simple_v4.xml  continuous_conflict.xml  deterministic_same_time.xml  ev_charging.xml  example.model  example.xml  example2general.xml  example2generalsimple.xml  example3general.xml  exampleCarina.xml  (+56 more)
test/testfiles/RHPn/: HPnG.xsd  simplerhpn.xml  simplerhpn_1cp2ct.xml  simplerhpn_1cp2ct1dp1dt.xml
test/testfiles/caseStudy/: norep_1_0.xml  norep_1_1.xml  norep_1_2.xml  norep_1_3.xml  norep_1_4.xml  norep_1_5.xml  norep_2_2.xml  norep_2_3.xml  norep_2_4.xml  norep_2_5.xml  rep_1_1.xml  rep_1_2.xml  rep_1_3.xml  rep_2_2.xml  rep_2_3.xml
test/testfiles/caseStudy-waterTreatmentPlant/: waterTreatmentPlant-2-0-1.xml  waterTreatmentPlant-3-0-1.xml  waterTreatmentPlant-3-1-1.xml  waterTreatmentPlant-3-1-2.xml  waterTreatmentPlant-3-1-3.xml  waterTreatmentPlant-4-0-1.xml  waterTreatmentPlant-4-1-1.xml  waterTreatmentPlant-4-2-1.xml  waterTreatmentPlant-5-0-1.xml  waterTreatmentPlant-5-1-1.xml  waterTreatmentPlant-5-2-1.xml  waterTreatmentPlant-5-3-1.xml  waterTreatmentPlant-5-3-2.xml  waterTreatmentPlant-5-3-3.xml
test/testfiles/examplesHybridAutomata/: HPnG.xsd  exampleHybrid1.model  exampleHybrid1.xml  exampleHybrid2.model  exampleHybrid2.xml  exampleHybrid3.model  exampleLateFiring.xml  exampleNondeterminism1.model  exampleNondeterminism1.xml  exampleNondeterminism3.xml  exampleNondeterminism4.xml  examplePauline2.model  examplePauline2.xml  examplePaulineSimple.model  exampleTwoFirings.xml  example_fail.model
test/testfiles/heatedTank/: heatedtank_v2.xml  heatedtank_v2_onepump.xml  heatedtank_v2_restricted.xml  heatedtank_v3.xml
test/testfiles/nondeterministicChoices/: nondet1_1g.xml
test/testfiles/nondeterministicConflicts/: HPnG.xsd  charging_ver1.xml  charging_ver3.xml  fig1nonprophetic.xml  fig1prophetic.xml  fig5nonprophetic.xml  fig5prophetic.xml  nondet1_1g.xml  nondet1_2g.xml
test/testfiles/nondeterministicExamples/: fig1prophetic_b.xml  fig5nonprophetic.xml
test/testfiles/nondeterministicModelsCharging/: charging_ver4d.xml
test/testfiles/nondeterministicModelsIFM/: charging_ver2a.xml  charging_ver2c.xml  charging_ver3c.xml  charging_ver3d.xml  charging_ver4c.xml
test/testfiles/profiling/: Formula.xsd  (+6 more)
(+76 files in other folders)
